[package]
name = "rust-upload-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = { version = "4.9.0", features = ["rustls"] }
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
openssl = "0.10.68"
serde = { version = "1.0.215", features = ["derive"] }
rustls = "0.20.0"
rustls-pemfile = "1.0.0"
